package dominio;

public enum CategoriaPrenda {
  PARTE_sUPERIOR,
  CALZADO,
  PARTE_INFERIOR,
  ACCESORIOS
}
