package dominio;

public enum MaterialPrenda {
  JEAN,
  CUERO
  }
