@startuml
class Atuendo{
	List<Prenda> prendas
	cargarPrenda(prenda)
}
enum MaterialPrenda{
	JEAN,
	CUERO
}
enum CategoriaPrenda{
	PARTES_UPERIOR,
	CALZADO,
	PARTE_INFERIOR,
	ACCESORIOS
}
class Prenda{
	TipoPrenda tipo
	MaterialPrenda material
	List<Color> colores

	Bool agregarColor(Color c)
}
class TipoPrenda{
	CategoriaPrenda categoria
}
abstract PrendaFactory{
	TipoPrenda tipo
	crearPrenda(color, material):Prenda
}

class PantalonFactory extends PrendaFactory{
	TipoPrenda tipo = new TipoPrenda(PARTE_INFERIOR)
}


Prenda --> TipoPrenda
MaterialPrenda <-up- Prenda
Prenda -down-> "1..*" Color
TipoPrenda --> CategoriaPrenda
PrendaFactory -> TipoPrenda
PrendaFactory ..> Prenda
PrendaFactory .up.> Color

MaterialPrenda <. PrendaFactory
Prenda "1..*" <-up- Atuendo
@enduml